<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/toss_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/coin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20sp"
        android:text="@string/toss_label"
        />

    <TextView
        android:id="@+id/coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@drawable/coin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/toss_label_text_view"
        app:layout_constraintBottom_toTopOf="@+id/batting_first_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="I'm Coin"
        android:textSize="@dimen/home_buttons_text_size"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/batting_first_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batting_first_selection_label"
        app:layout_constraintTop_toBottomOf="@id/coin"
        app:layout_constraintBottom_toTopOf="@+id/batting_first_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Base.TextAppearance.AppCompat.Large"/>

    <Spinner
        android:id="@+id/batting_first_spinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batting_first_label"
        app:layout_constraintBottom_toTopOf="@+id/start_game_button"
        tools:listitem="Team 1"/>

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/batting_first_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/start_button"
        android:background="@color/colorAccent"
        android:textColor="@color/white"/>

</android.support.constraint.ConstraintLayout>